--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "migrateh": "heroku run knex migrate:latest -a YOUR_HEROKU_APP_NAME",
-    "rollbackh": "heroku run knex migrate:rollback -a YOUR_HEROKU_APP_NAME",
-    "databaseh": "heroku pg:psql -a YOUR_HEROKU_APP_NAME",
-    "seedh": "heroku run knex seed:run -a YOUR_HEROKU_APP_NAME",
+    "migrateh": "heroku run knex migrate:latest -a ft-water-my-plants-1",
+    "rollbackh": "heroku run knex migrate:rollback -a ft-water-my-plants-1",
+    "databaseh": "heroku pg:psql -a ft-water-my-plants-1",
+    "seedh": "heroku run knex seed:run -a ft-water-my-plants-1",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "deploy": "git push heroku main"
   },
   "engines": {
-    "node": "16.13.0"
+    "node": "16.4.1",
+    "npm": "7.24.1"
   },
   "license": "ISC",
   "dependencies": {
